[tool.poetry]
name = "hddpy"
version = "0.1.0"
description = ""
authors = ["Zengs <zengs@himkt.cn>"]

[[tool.poetry.source]]
name = "mirrors"
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true
secondary = true

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.1"
APScheduler = "^3.7.0"
pandas = "^1.2.4"
rsa = "^4.7.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
